--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-    这是一个空文件。
+
+  this is a demo.
+
 </body>
 </html>
